deployments/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio-server
          image: ghcr.io/bencegyurus/portfolio:2026-08-04 # {"$imagepolicy": "flux-system:portfolio-image"}
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - name: portfolio-port
      port: 80
      targetPort: 3000
